# notesAPI

./: .gitignore  manage.py  pyproject.toml
authentication/: admin.py  helpers.py  models.py
authentication/api/v1/: __init__.py  serializers.py  urls.py  views.py
notes_backend/: response.py  settings.py  urls.py
notes_backend/settings/: base.py
